[tool.poetry]
name = "repl-nix-ddos-attacktelegrambot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_ddos_attacktelegrambot"}]

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
pytelegrambotapi = "^4.19.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
